fixed responsiveness on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,6 +168,12 @@ header::before {
   font-size: 95%;
 }
 
+@media (max-width: 480px) {
+  .hero .hero-avatar {
+    width: 10rem;
+    height: 10rem;
+  }
+}
 #about {
   margin: 0 auto;
   max-width: 800px;
@@ -251,8 +257,7 @@ header::before {
 }
 @media (max-width: 768px) {
   .stats .stats-iframe {
-    width: 100%;
-    height: auto;
+    display: none;
   }
 }
 
@@ -273,21 +278,26 @@ header::before {
   font-size: 2rem;
 }
 #projects .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background: #f0f0f0;
   padding: 1.5rem;
   border-radius: 0.8rem;
   width: 100%;
-  height: 25rem;
+  height: auto;
   max-width: 35rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease, box-shadow 0.2s ease;
   overflow: visible;
   position: relative;
   padding: 2rem;
+  gap: 0.4rem;
 }
 #projects .card .img-container {
-  width: 100%;
-  height: 200px;
+  width: 24rem;
+  height: 10rem;
   border-radius: 0.5rem;
   overflow: hidden;
 }
@@ -311,13 +321,15 @@ header::before {
 }
 #projects .fa-brands,
 #projects .fa-solid {
-  font-size: 1.9rem;
+  font-size: 2.5rem;
   color: black;
 }
+#projects .fa-brands:hover,
+#projects .fa-solid:hover {
+  color: #f0a500;
+  transition: 0.6s;
+}
 @media (max-width: 1200px) {
-  #projects .card {
-    max-width: 30rem;
-  }
   #projects h2 {
     font-size: 1.8rem;
   }
@@ -329,10 +341,6 @@ header::before {
   }
 }
 @media (max-width: 768px) {
-  #projects .card {
-    max-width: 25rem;
-    padding: 2rem;
-  }
   #projects h2 {
     font-size: 1.6rem;
   }
@@ -344,8 +352,9 @@ header::before {
   }
 }
 @media (max-width: 480px) {
-  #projects .card {
-    max-width: 20rem;
+  #projects .card .img-container {
+    width: 20rem;
+    height: 8rem;
   }
   #projects h2 {
     font-size: 1.4rem;
