--- a/assets/scss/components/_hero.scss
+++ b/assets/scss/components/_hero.scss
@@ -82,3 +82,15 @@
     }
   }
   
+
+  @media (max-width: 480px) {
+
+    .hero{
+
+      .hero-avatar{
+        width: 10rem;
+        height: 10rem;
+      }
+    }
+    
+  }
