--- a/assets/scss/components/_projects.scss
+++ b/assets/scss/components/_projects.scss
@@ -19,22 +19,27 @@
   }
   
   .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background: #f0f0f0;
     padding: 1.5rem;
     border-radius: 0.8rem;
     width: 100%;
-    height: 25rem;
+    height: auto;
     max-width: 35rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease, box-shadow 0.2s ease;
     overflow: visible; 
     position: relative; 
     padding: 2rem;
+    gap: 0.4rem;
     
   
     .img-container {
-      width: 100%;
-      height: 200px; 
+      width: 24rem;
+      height: 10rem;
       border-radius: 0.5rem;
       overflow: hidden;
     }
@@ -49,6 +54,8 @@
     h3 {
       font-size: 1.5rem; 
     }
+
+  
   
     p {
       font-size: 1rem;
@@ -64,16 +71,22 @@
   
   .fa-brands,
   .fa-solid {
-    font-size: 1.9rem;
+    font-size: 2.5rem;
     color: black;
   }
+
+  .fa-brands:hover,
+  .fa-solid:hover {
+    color: variables.$yellowcolor;
+    transition: 0.6s;
+  }
+
+
   
   
   
   @media (max-width: 1200px) {
-    .card {
-      max-width: 30rem; 
-    }
+    
   
     h2 {
       font-size: 1.8rem;
@@ -89,11 +102,7 @@
   }
   
   @media (max-width: 768px) {
-    .card {
-      max-width: 25rem; 
-      padding: 2rem;
-    }
-  
+   
     h2 {
       font-size: 1.6rem;
     }
@@ -108,10 +117,16 @@
   }
   
   @media (max-width: 480px) {
-    .card {
-      max-width: 20rem; 
+    .card{
+      .img-container{
+        width: 20rem;
+        height: 8rem;
+      }
     }
+    
+    
   
+
     h2 {
       font-size: 1.4rem;
     }
