--- a/assets/scss/components/_skills.scss
+++ b/assets/scss/components/_skills.scss
@@ -63,8 +63,7 @@
       border: none;
   
       @media (max-width: 768px) {
-        width: 100%;
-        height: auto; 
+        display: none;
       }
     }
   }
